=======
CHANGES
=======

------
0.13.2
------

Fixed precision bug for negative numbers
Mouse_wheel now works for mac
Removed xlrd dep
Column name length and max cell width in adjustColumnWidths
Can now use different datetime formats
Changed header color variable names
Can set row header color in prefs
Index header uses row header color

------
0.13.0
------

Fixes to read_excel
HDF import
Fix to plot error
Fix to maximise app on small screens
Added thousand separator formatting
Changed tablecolheader to colheader
Can now set header colors on object
Removed vertical plot tools option
Hide/show plot tools button
Try to extract numeric from mixed data before plotting

------
0.12.2
------

Added editable parameter to Table
Added enable_menus parameter
Option to import numbers as string
Changed to pickle for dataexplore project files
Fixes to syncing of rowcolors

------
0.12.1
------

Fix to mlab griddata bug
Changed griddata to use scipy (but not a dependency)
Added col header color preference

------
0.12.0
------

Fixes to clean data
Convert currencies to numeric
Column widths now saved in dataexplore
Fix to string query to allow python code
New preferences system uses a text config file
Violinplot
Datetime conversion fixes
Batch process plugin

------
0.11.0
------

Added find/replace dialog
Moved redundant options from 3D panel
Can now plot 3D using check button
Grouped scatter plots in 3D
Removed redundant data in saving of plot options in projects
Recent project items in menu
Dropdown entry menu for categorical columns
Crosstab function
Radviz plot
Improved multi-index column display

------
0.10.0
------

Fix to dropping index when no name
Added dotplot
Added axis tick and tick label format options
Added plotting animation dialog
Added ability to label points in scatter plots using a column
Added ability to set point sizes with data column
Fix to plot frame closing bug
Added empty column selection for groupby option